Changed name of Header program to Fits
The name of the Header program has been changed to Fits for operations that
are only related to FITS files: header keywords and extensions. Until now
only header keywords were viewed manipulated, but it will be improved to
also view/manipulate FITS extensions. Each file format has its own
definition for what FITS calls "header"s and "extension"s.

Thus, we can't have an easy to maintain program to do these things on
different file formats, rather, its better to explicitly have programs to
work on file format specific operations.

Previously the other programs would only work with FITS files, but thanks
to `gal_data_t', the programs won't be immediately using FITS files any
more. There are wrappers to read input in different formats. This has not
been fully implemented yet in all the programs, but will be done soon in
all the programs.

--- a/bin/fits/Makefile.am
+++ b/bin/fits/Makefile.am
@@ -26,15 +26,15 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
 ## Program definition (name, linking, sources and headers)
-bin_PROGRAMS = astheader
+bin_PROGRAMS = astfits
 
-astheader_LDADD = -lgnuastro
+astfits_LDADD = -lgnuastro
 
-astheader_SOURCES = main.c ui.c header.c
+astfits_SOURCES = main.c ui.c extension.c fits.c header.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h header.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h extension.c fits.c header.h
 
 
 ## The configuration file (distribute and install).
 ## NOTE: the man page is created in doc/Makefile.am
-dist_sysconf_DATA = astheader.conf
+dist_sysconf_DATA = astfits.conf
