--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -96,8 +96,8 @@ endif
 if COND_CROP
   MAYBE_CROP_MAN = man/astcrop.1
 endif
-if COND_HEADER
-  MAYBE_HEADER_MAN = man/astheader.1
+if COND_FITS
+  MAYBE_FITS_MAN = man/astfits.1
 endif
 if COND_MKCATALOG
   MAYBE_MKCATALOG_MAN = man/astmkcatalog.1
@@ -126,10 +126,10 @@ endif
 #if COND_TEMPLATE
 #  MAYBE_TEMPLATE_MAN = man/astTEMPLATE.1
 #endif
-dist_man_MANS = $(MAYBE_ARITHMETIC_MAN) $(MAYBE_CONVERTT_MAN)           \
-  $(MAYBE_CONVOLVE_MAN) $(MAYBE_COSMICCAL_MAN) $(MAYBE_CROP_MAN)        \
-  $(MAYBE_HEADER_MAN) $(MAYBE_IMGWARP_MAN) $(MAYBE_MKCATALOG_MAN)       \
-  $(MAYBE_MKNOISE_MAN) $(MAYBE_MKPROF_MAN) $(MAYBE_NOISECHISEL_MAN)     \
+dist_man_MANS = $(MAYBE_ARITHMETIC_MAN) $(MAYBE_CONVERTT_MAN)		\
+  $(MAYBE_CONVOLVE_MAN) $(MAYBE_COSMICCAL_MAN) $(MAYBE_CROP_MAN)	\
+  $(MAYBE_FITS_MAN) $(MAYBE_WARP_MAN) $(MAYBE_MKCATALOG_MAN)		\
+  $(MAYBE_MKNOISE_MAN) $(MAYBE_MKPROF_MAN) $(MAYBE_NOISECHISEL_MAN)	\
   $(MAYBE_STATISTICS_MAN) $(MAYBE_SUBTRACTSKY_MAN) $(MAYBE_TABLE_MAN)
 
 
@@ -168,9 +168,9 @@ man/astcrop.1: $(top_srcdir)/bin/crop/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "crop regions of a dataset"                   \
 	                  --libtool $(toputildir)/crop/astcrop
 
-man/astheader.1: $(top_srcdir)/bin/header/args.h  $(ALLMANSDEP)
+man/astfits.1: $(top_srcdir)/bin/fits/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "view and manipulate FITS headers"            \
-	                  --libtool $(toputildir)/header/astheader
+	                  --libtool $(toputildir)/fits/astfits
 
 man/astmkcatalog.1: $(top_srcdir)/bin/mkcatalog/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) -n "Make a catalog from labeled input images"    \
@@ -205,5 +205,5 @@ man/asttable.1: $(top_srcdir)/bin/table/args.h  $(ALLMANSDEP)
 	                  $(toputildir)/TEMPLATE/astTEMPLATE
 
 man/astwarp.1: $(top_srcdir)/bin/warp/args.h  $(ALLMANSDEP)
-	$(MAYBE_HELP2MAN) -n "warp (transform) input image"                \
+	$(MAYBE_HELP2MAN) -n "warp (transform) input dataset"              \
 	                  --libtool $(toputildir)/warp/astwarp
