--- a/Makefile.am
+++ b/Makefile.am
@@ -62,8 +62,8 @@ endif
 if COND_CROP
   MAYBE_CROP = bin/crop
 endif
-if COND_HEADER
-  MAYBE_HEADER = bin/header
+if COND_FITS
+  MAYBE_FITS = bin/fits
 endif
 if COND_MKCATALOG
   MAYBE_MKCATALOG = bin/mkcatalog
@@ -109,7 +109,7 @@ endif
 ## having an uncommented `MAYBE_TEMPLATE' as a value in `SUBDIRS'.
 SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC) \
   $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE) $(MAYBE_COSMICCAL) $(MAYBE_CROP)  \
-  $(MAYBE_HEADER) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)   \
+  $(MAYBE_FITS) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)     \
   $(MAYBE_NOISECHISEL) $(MAYBE_STATISTICS) $(MAYBE_SUBTRACTSKY)         \
   $(MAYBE_TABLE) $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc tests
 
