--- a/lib/gnuastro.conf
+++ b/lib/gnuastro.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for Crop.
-# Crop is part of GNU Astronomy Utitlies.
+# Default values for the common options to all the programs in GNU
+# Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
@@ -17,16 +17,13 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
-# Input image and catalog parameters:
- cathdu         1
- iwidth         201
- wwidth         3
- hstartwcs      0
- hendwcs        0
+# Input:
+ hdu            1
+ ignorecase     1
+ searchin       name
 
-# Output parameters:
- checkcenter    0
- suffix         _cropped.fits
+# Output:
+ tableformat    fits-binary
 
-# Operating mode:
- mode          wcs
+# Operating mode
+ minmapsize     1000000000
