HDU modification now fully implemented in Fits program
The Fits program now fully implements HDU modification options `--copy',
`--cut' and `--remove'. The Fits program section of the book has also been
completely re-written to accommodate these changes. Also, by default, the
Fits program will now print the extension information when no option is
specified. There is a new `--printallkeys' (`-p') option to print all the
keywords in one HDU. A test was also written to check the `--copy' option.

In the process, the `gal_checkset_check_remove_file' now accepts a `keep'
argument. This was done because unlike all the other programs until now,
the Fits program must not delete the output file if it is specified: we
want to add the HDU as an extension to the output file, not delete the
file.

--- a/bin/fits/Makefile.am
+++ b/bin/fits/Makefile.am
@@ -30,9 +30,9 @@ bin_PROGRAMS = astfits
 
 astfits_LDADD = -lgnuastro
 
-astfits_SOURCES = main.c ui.c extension.c fits.c header.c
+astfits_SOURCES = main.c ui.c extension.c fits.c keywords.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h extension.c fits.c header.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h extension.c fits.c keywords.h
 
 
 ## The configuration file (distribute and install).
