Tesselation with the new data structure: work started
Work has started on implementing the tessellation processing with the new
`gal_data_t'. Thanks to its starter pointer and sizes, it was just
necessary to define a new `block' element. From now on, when `block' is
non-NULL, it means that the array in this dataset is not actually allocated
but is only one part of it.

The old `mesh' and `spatialconvolve' library source files have been removed
and we now have two new source files called `tile' and `convolve'. The old
routines in the former source files are being transferred to the new source
files.

An intial implementation of defining a full, non-overlapping tessellation
has been done in `gal_tile_all_position'. Using this function, we have
defined `gal_tile_all_position_two_layers' which will define the channels
and tiles tessellations. Previously this was done in a (very complicated)
mesh structure (`gal_mesh_params') that was not very trivial to navigate
and understand. The old structure was mainly focused on efficiency and only
defined for regular non-overlapping grids/tessellations, but was hard to
follow and less general.

The new system will allow arbitrary tiles defined anywhere (even
overlapping) over an allocated array. It is also extremely easy to
understand, since there is no new structure, it is the same old
`gal_data_t' that a developer is already fully familiar with and is
commonly used in many libraries/programs.

This was mainly done in preparation of porting NoiseChisel and SubtractSky
to `gal_data_t', but currently it is being tested on Convolve's
spatial-domain convolution. Once it has been fully tested and implemented
here, it will be really easy to apply it in those programs. Infact,
SubtractSky will probably be removed, because we can define tessellation
feature in Statistics which can effectively estimate the Sky value (and
many other statistics) on a grid. Then it is possible to use Arithmetic to
actually subtract the derived image from the

--- a/bin/convolve/astconvolve.conf
+++ b/bin/convolve/astconvolve.conf
@@ -22,15 +22,13 @@
  khdu               1
 
 # Output:
+ type               float32
 
 # Mesh grid:
- meshsize           32
- nch1               1
- nch2               1
- lastmeshfrac       0.6
- fullconvolution    0
+ tile               30,30
+ numchannels        1,1
+ convoverch         0
 
 # Operating mode:
  domain             frequency
- makekernel         0
  minsharpspec       0.005
