Spatial convolution with new tessellation
Spatial convolution has been fully implemented using the new tessellation
system defined in `lib/tile.c'. It can also account for individual
convolution on each channel as before, but not using any extra structure!
It was fully done with `gal_data_t'.

--- a/bin/convolve/astconvolve.conf
+++ b/bin/convolve/astconvolve.conf
@@ -25,7 +25,7 @@
  type               float32
 
 # Mesh grid:
- tile               30,30
+ tilesize           30,30
  numchannels        1,1
  remainderfrac      0.1
  convoverch         0
