Tessellation options now common to all programs
Tessellation is used in several programs currently (Convolve, NoiseChisel
and SubtractSky), and we will be later implementing it in Statistics
too. Managing its options in the separate programs would be a burden for
the developers and also the users (in case their short or long option names
mistakenly differs). So with this commit, the tessellation related options
are now part of the common options. A short description of each option has
also been added in the new `Processing options' of the book (a
sub-sub-section of the `Common options' section).

In the process, the following corrections were also made:

 - The values of tessellation options in the Convolve program are now taken
   from the common options structure, not its own structure.

 - The values to these new common tessellation options has been moved to
   `gnuastro.conf' to be visible by all programs.

 - The programs that don't use tessellation now completely ignore these
   options (in reading/writing of option names/values for example with
   `--help'). A new class of option selection by group was defined for this
   job in the `ui.c' file of such programs.

 - A `Tessellation' subsection was added to the `Common program behavior'
   chapter of the book. It will be further expanded in the next commits and
   is not final yet. Especially since it is strongly related to
   Interpolation and also the old `SubtractSky' program which may be
   removed (since its job can possibly be broken `Statistics' and
   `Arithmetic').

 - The `Automatic output' subsection was moved close the end of the `Common
   program options' before the `Output headers' subsection.

 - The three `--onlyversion', `--cite' and `--config' options were
   previously treated separately with the `options_immediate'
   function. However, afterwords, options were given the ability to call
   certain functions when they are called. So that old function was removed
   and three functions were 

--- a/lib/gnuastro.conf
+++ b/lib/gnuastro.conf
@@ -22,6 +22,12 @@
  ignorecase     1
  searchin       name
 
+# Tessellation
+ tilesize       40,40
+ numchannels    1,1
+ remainderfrac  0.1
+ workoverch     0
+
 # Output:
  tableformat    fits-binary
 
