Added -j8 to the suggestions after ./configure and make
The compilation time for some of the libraries with default settings can be
a few minutes, so it can take very long if the user doesn't use `-j8' with
`make'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -158,9 +158,9 @@ all-local:
 	 echo "Gnuastro $(VERSION), was successfully built.";                        \
 	 echo "Please check the build on your system by running:";                   \
 	 echo;                                                                       \
-	 echo "    make check";                                                      \
+	 echo "    make check -j8";                                                  \
 	 echo;                                                                       \
-	 echo "(Check faster on N threads with 'make check -jN'.)";                  \
+	 echo "(You can change the 8 to the number of CPU threads available.)";      \
 	 echo "(The following \"Leaving directory\" notices can be ignored.)";       \
 	 echo "==================================================================="; \
 	 echo "==================================================================="; \
