--- a/configure.ac
+++ b/configure.ac
@@ -671,8 +671,8 @@ AC_OUTPUT
 AS_IF([test x$enable_guide_message = xyes],
 [
   AS_ECHO([])
-  AS_ECHO([====================================================================])
-  AS_ECHO([====================================================================])
+  AS_ECHO([=======================================================================])
+  AS_ECHO([=======================================================================])
   AS_ECHO(["$PACKAGE_NAME (Gnuastro) $PACKAGE_VERSION is successfully"])
   AS_ECHO(["configured for this machine."])
   AS_ECHO([])
@@ -703,12 +703,12 @@ AS_IF([test x$enable_guide_message = xyes],
      )
   AS_ECHO(["To build Gnuastro $PACKAGE_VERSION, please run:"])
   AS_ECHO([])
-  AS_ECHO(["    make"])
+  AS_ECHO(["    make -j8"])
   AS_ECHO([])
-  AS_ECHO(["(RECOMMENDED: Build faster on N threads with 'make -jN'.)"])
+  AS_ECHO(["(You can change the 8 to the number of CPU threads available.)"])
   AS_ECHO(["(Configure with '--disable-guide-message' for no messages.)"])
-  AS_ECHO(["(Please be patient, some libraries take a few minutes to compile.)"])
-  AS_ECHO([====================================================================])
-  AS_ECHO([====================================================================])
+  AS_ECHO(["(Please be patient, some libraries can take a few minutes to compile.)"])
+  AS_ECHO([=======================================================================])
+  AS_ECHO([=======================================================================])
   AS_ECHO([])
 ])
