Old neighbors.h header removed, used new in MakeProfiles
In the previous commit, a new macro was defined to easily parse over the
neighbors of an index in an array. But the old `lib/neighbors.h' header
still existed and was used in MakeProfiles to build the profile from the
center outwards. So as a good test for that macro and also a cleaner
implementation of MakeProfiles, the new macro is now used and the old
`lib/neighbors.h' header has been completely removed.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -83,7 +83,7 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
 # distribute them here.
 EXTRA_DIST = $(headersdir)/README gnuastro.pc.in arithmetic-binary.h    \
   arithmetic-onlyint.h arithmetic-other.h config.h.in checkset.h        \
-  fixedstringmacros.h neighbors.h options.h timing.h
+  fixedstringmacros.h options.h timing.h
 
 
 
