--- a/bin/statistics/aststatistics.conf
+++ b/bin/statistics/aststatistics.conf
@@ -19,9 +19,11 @@
 
 # Input image:
 
-# Tessellation
- interponlyblank      1
- interpnumngb         9
+# Sky and its STD settings
+ khdu                 1
+ modmedqdiff       0.01
+ smoothwidth          3
+ sclipparams      3,0.1
 
 # Histogram and CFP settings
  numasciibins        70
