--- a/bin/gnuastro.conf
+++ b/bin/gnuastro.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for SubtractSky.
-# SubtractSky is part of GNU Astronomy Utitlies.
+# Default values for the common options to all the programs in GNU
+# Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
@@ -18,23 +18,20 @@
 # without any warranty.
 
 # Input:
- khdu               1
+ hdu            1
+ ignorecase     1
+ searchin       name
+
+# Tessellation
+ tilesize         50,50
+ numchannels      1,1
+ remainderfrac    0.1
+ workoverch       0
+ interpnumngb     9
+ interponlyblank  0
 
 # Output:
+ tableformat    fits-binary
 
-# Mesh grid:
- meshsize          32
- nch1               1
- nch2               1
- lastmeshfrac     0.6
- numnearest         9
- smoothwidth        5
- fullconvolution    0
- fullinterpolation  0
- fullsmooth         0
-
-# Statistics:
- mirrordist       1.5
- minmodeq        0.49
- sigclipmultip      3
- sigcliptolerance 0.2
+# Operating mode
+ minmapsize     1000000000
